# azure-chainlit

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  build-and-push.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  sshd_config
app/: __init__.py  app.py  auth.py  chat_history.py  create_assistant.py  database.py  models.py  run_migrations.py  seeds.py  settings.py  tesla-stock-price.csv
app/.chainlit/: config.toml
app/components/: chat_history.py  login_button.py
app/config/: settings.py
app/handlers/: __init__.py  auth_handler.py  event_handler.py  file_handler.py
app/migrations/: env.py
app/migrations/versions/: 0b5143e2d794_initial.py  1339834ff5a4_add_props_to_elements.py  46bcd210abb8_add_defaultopen_to_steps.py  9ac9787b8261_initial.py  9f423e978c81_create_tables.py  d09646601959_drop_column_identifier.py  f1831b08a4d8_users.py
app/services/: __init__.py  assistant.py  azure_storage.py  database.py  openai_client.py
app/utils/: __init__.py
azure-pipelines/: db-migration-pipeline.yml
docs/: db-migration-guide.md
javascript/: Dockerfile  package-lock.json  package.json
javascript/tools/: calculator.js  index.js  weather-service.js
migrations/: env.py
terraform/: .terraform.lock.hcl  azure_devops.tf  main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.sample  variables.tf
