[tool.poetry]
name = "azure-chainlit"
version = "0.1.0"
description = ""
authors = ["shuntagami <shuntagami23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^2.4.1"
openai = "^1.66.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
