[tool.poetry]
name = "azure-chainlit"
version = "0.1.0"
description = ""
authors = ["shuntagami <shuntagami23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.68.0"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
authlib = "^1.5.1"
itsdangerous = "^2.2.0"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
azure-identity = "^1.21.0"
azure-storage-file-datalake = "^12.19.0"
aiohttp = "^3.11.14"
chainlit = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
